--- a/prep/cw/v2020/soil_contamination_data_prep.Rmd
+++ b/prep/cw/v2020/soil_contamination_data_prep.Rmd
@@ -341,6 +341,7 @@ status <- site_status %>%
 ## Save to Toolbox 
 
 ```{r save-to-toolbox}
+sc_status <- read_csv(file.path(dir_goal, "output/sc_status.csv"))
 write_csv(sc_status, file.path(dir_scores, "layers/cw_contamination_status.csv"))
 ```
 
