--- a/prep/cw/v2020/soil_contamination_trend.Rmd
+++ b/prep/cw/v2020/soil_contamination_trend.Rmd
@@ -68,6 +68,6 @@ write_csv(sc_trend, file.path(dir_goal, "output/sc_trend.csv"))
 
 ```{r save-to-toolbox, eval=F}
 sc_trend <- read_csv(file.path(dir_goal, "output/sc_trend.csv"))
-write_csv(sc_trend, file.path(dir_scores, "layers/sc_trend.csv"))
+write_csv(sc_trend, file.path(dir_scores, "layers/cw_contamination_trend.csv"))
 ```
 
