Save draft pressure layers and updated status

--- a/prep/cw/v2020/debris_data_prep.Rmd
+++ b/prep/cw/v2020/debris_data_prep.Rmd
@@ -136,11 +136,13 @@ pressure <- fad_status %>%
   dplyr::select(-status)
 
 # Save to output folder 
+write_csv(pressure, file.path(dir_goal, "output/po_debris.csv"))
 ```
 
 ### Save Pressure to Toolbox 
 
 ```{r save-prs-toolbox, eval=F}
-
+po_debris <- read_csv(file.path(dir_goal, "output/po_debris.csv"))
+write_csv(po_debris, file.path(dir_scores, "layers/po_debris.csv"))
 ```
 
